Zeeshan's updated files

--- a/Design HTML/Personal_Details.html
+++ b/Design HTML/Personal_Details.html
@@ -24,19 +24,19 @@
 
   </script>
 </head>
-<div class="navbar-inverse" style="border-radius: 0px;">
+<div class="navbar-inverse" style="border-radius: 0px;height: 60px;">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       
-      <a class="navbar-brand" href="#"><img src="images/Logo_1_.png"></a>
+      <a class="navbar-brand" href="#"><img src="images/Logo_1_.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#" style="font-size: 20px;top: 6px;">Home </a></li>
-        <li><a href="#"><img src="images/header_dashboard_button_1_.png" style="margin: -15px;height: 65px"></a></li>
-        <li style="color: transparent;">home</li>
+        <li><a href="#" class="NormalCharacterStyle2019" style="top: 6px;">Home </a></li>
+        <li><a href="#" class="dashboard_image" style="color: white; font-size : 18px; line-height : 22px;"><div style="margin-top: 5px">Dashboard</div></a></li>
+        <li style="color: transparent;">home</li>&nbsp;&nbsp;&nbsp;
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -46,15 +46,15 @@
         <span><a href=""><img src="images/filter_button.png" style="margin-top: 4px;;margin-left: -10px;"></a></span>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><img src="images/header_notification_icon_1_.png"></a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="images/header_username_1_.png">&nbsp;<img src="images/header_profile_icon_1_.png"></a>
+        <li><a href="#" style="margin-top: 5px;"><img src="images/header_notification_icon_1_.png"></a></li>
+        <li class="dropdown" style="height: 60px;">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="NormalCharacterStyle22" style="font-size: 20px;margin-right: 10px;border-bottom: 1px solid white;">Faizan</span>&nbsp;<img src="images/header_profile_icon_1_.png"></a>
           <ul class="dropdown-menu myprofile_dropdown">
-            <li><a href="My_Profile.html" class="myprofile_dropdown_link NormalCharacterStyle24">Profile</a></li>
+            <li><a href="My_Profile.html" class="myprofile_dropdown_link NormalCharacterStyle25">Profile</a></li>
              <li role="separator" class="profile_divider"></li>
-            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle24">Settings</a></li>
+            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle25">Settings</a></li>
             <li role="separator" class="profile_divider"></li>
-            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle24">Log Out</a></li>
+            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle25">Log Out</a></li>
           </ul>
         </li>
       </ul>
@@ -66,7 +66,7 @@
 
 <div class="container-fluid col-sm-12 header2 NormalCharacterStyle25">
   
-    <div style="margin-top: 15px">Dashboard > File Admission Application > Personal Details</div>
+    <div style="margin-top: 12px">Dashboard > File Admission Application > Personal Details</div>
 
 </div>
 <br/>
@@ -75,28 +75,36 @@
   <div class="row content" style="min-height: 100vh;height: 1000px">
     <div class="col-sm-2 sidenav text-left side-menu">
 
-      <div class="dropdown" style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps1" class="main_list NormalCharacterStyle25" href="My_Applications.html">My Applications<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps1"></a></div></a>
- 
-</div>
+       <a class="main_list " href="My_Applications.html">  <div style="margin-bottom: 15px;">
+    <span class="NormalCharacterStyle25">My Applications</span><span class="icon-arrow-right pull-right"><img src="images/arrow.png"></span>   
+</div></a>
 
-      <div class="dropdown"  style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps2" class="main_list NormalCharacterStyle18">File Admission App<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-down dropdown_icon " data-toggle="collapse" data-target="#clps2"></a></div></a>
+
+
+<div class="dropdown"  style="margin-bottom: 15px;">
+    <a data-toggle="collapse" data-target="#clps2" class="main_list " ><div><span class="NormalCharacterStyle18"> File Admission App</span><span class="icon-arrow-right pull-right main_list"><img src="images/arrow.png"></span></div></a>
     <div class="collapse" id="clps2">
       <br/>
-        <li class="menu_list selected_bg"><a href="Personal_Details.html" class="NormalCharacterStyle22">Personal Details</a></li>
-        <li class="menu_list"><a href="Make_Choices.html" class="NormalCharacterStyle24">Make Choices</a></li>
-        <li class="menu_list"><a href="Educational_Details.html" class="NormalCharacterStyle24">Educational Details</a></li>
-        <li class="menu_list"><a href="Test_Results.html" class="NormalCharacterStyle24">Test Results</a></li>
-        <li class="menu_list"><a href="Upload_Documents.html" class="NormalCharacterStyle24">Documents</a></li>
-        <li class="menu_list"><a href="Payments.html" class="NormalCharacterStyle24">Payments</a></li>
+        <li class="list_items selected_bg"><a href="Personal_Details.html" class="menu_list "><span  class="NormalCharacterStyle22">Personal Details</span></a>
+      </li>
+      <li class="list_items "><a href="Make_Choices.html" class="menu_list "><span  class="NormalCharacterStyle24">Make Choices</span></a>
+      </li>
+      <li class="list_items"><a href="Educational_Details.html" class="menu_list "><span  class="NormalCharacterStyle24">Educational Details</span></a>
+      </li>
+      <li class="list_items"><a href="Test_Results.html" class="menu_list "><span  class="NormalCharacterStyle24">Test Results</span></a>
+      </li>
+      <li class="list_items"><a href="Upload_Documents.html" class="menu_list "><span  class="NormalCharacterStyle24">Documents</span></a>
+      </li>
+       <li class="list_items"><a href="Payments.html" class="menu_list "><span  class="NormalCharacterStyle24">Payments</span></a>
+      </li>
     </div>   
 </div>
 
-      <div class="dropdown"  style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps3" class="main_list NormalCharacterStyle25">My Payments<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps3"></a></div></a>
- 
-</div>
+
+
+       <a class="main_list " href="My_Profile.html">  <div style="margin-bottom: 15px;">
+    <span class="NormalCharacterStyle25">My Payments</span><span class="icon-arrow-right pull-right"><img src="images/arrow.png"></span>   
+</div></a>
 
 
     </div>
@@ -106,12 +114,15 @@
       <p class="NormalCharacterStyle11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur.</p>
 
       <div class="panel panel-default panel_shadow">
-      <div class="panel-heading" style="height: 50px">
+      <a id="menu_toggle" href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+      <div class="panel-heading" style="height: 60px">
         <h4 class="panel-title">
-          <div class="NormalCharacterStyle10">Personal Information<div class="icon-arrow-right pull-right"><div class="check-"></div><a id="menu_toggle" ><i class="glyphicon glyphicon-chevron-down normal-color" data-toggle="collapse" data-parent="#accordion" href="#collapse2"></i></a></div></div> 
+         <div class="NormalCharacterStyle10 margin_top">Personal Information<div class="icon-arrow-right pull-right"><div class="check-"></div><i class="glyphicon glyphicon-chevron-down normal-color"></i></div></div> 
         </h4>
-              </div>
+
+              </div></a>
       <div id="collapse2" class="panel-collapse panel-heading collapse">
+      	<div class="panel_divider"></div>
         <div class="panel-body" >
     <br/>
 
@@ -171,64 +182,83 @@
       </div>
     </div>
 
-    <div class="panel panel-default panel_shadow">
-      <div class="panel-heading text-left">       
-        <h4 class="panel-title NormalCharacterStyle2 contact_info_card_bg" >
-                 Contact Information<div class="icon-arrow-right pull-right"><span class="check_icon"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a id="menu_toggle2" ><i class="glyphicon glyphicon-chevron-down normal-color" data-toggle="collapse" data-parent="#accordion" href="#collapse3"></i></a></div>
+
+          <div class="panel panel-default panel_shadow">
+      <a id="menu_toggle" href="#contactinfo" data-toggle="collapse" data-parent="#accordion">
+      <div class="panel-heading" style="height: 60px">
+        <h4 class="panel-title">
+         <div class="NormalCharacterStyle2 margin_top">Contact Information<div class="icon-arrow-right pull-right"><span class="check_icon"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-chevron-down normal-color"></i></div></div> 
         </h4>
 
-      <div id="collapse3" class="panel-collapse collapse">
-        <div class="panel-body">Some Text</div>
-      </div>
+              </div></a>
+      <div id="contactinfo" class="panel-collapse panel-heading collapse">
+      	<div class="panel_divider"></div>
+        <div class="panel-body" >
+    <br/>
+
+<div class="col-md-12">
+<div class="col-md-10 text-left">
+  <div class="col-md-5">
+         <div class="form">
+     <input class="input_name" type="text" name="Caddress"  placeholder="Current Address">
     </div>
 </div>
 
- <div class="panel panel-default panel_shadow">
-      <div class="panel-heading text-left">       
-        <h4 class="panel-title NormalCharacterStyle2 other_info_card_icon">
-                 Other Information<div class="icon-arrow-right pull-right"><span class="caution_icon"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a id="menu_toggle3" ><i class="glyphicon glyphicon-chevron-down normal-color" data-toggle="collapse" data-parent="#accordion" href="#collapse4"></i></a></div>
-        </h4>
-
-      <div id="collapse4" class="panel-collapse collapse">
-        <div class="panel-body">Some Text</div>
-      </div>
+<div class="col-md-5">
+    <div class="form">
+     <input class="input_father_name" type="text" name="Padress" placeholder="Permanent Address">
     </div>
 </div>
+<br/><br/><br/><br/>
+ <div class="col-md-5">
+         <div class="form">
+     <input class="input_CNIC_no" type="text" name="Email" placeholder="Email">
+    </div>
+</div>
+
+<div class="col-md-5">
+    <div class="form">
+     <input class="input_father_CINC_no" type="text" name="Phone_Landline" placeholder="Phone Landline" >
+    </div>
+</div>
+<br/><br/><br/><br/>
+ <div class="col-md-5">
+         <div class="form">
+     <input class="input_DOB" type="text" name="Yphone"  placeholder="Phone (Your Phone)">
+    </div>
+</div>
+
+<div class="col-md-5">
+    <div class="form">
+     <input class="input_nationality" type="text" name="Fphone"  placeholder="Phone (Father)">
+    </div>
+</div>
+<br/><br/><br/><br/>
+ <div class="col-md-5">
+         <div class="form">
+     <input class="input_DOB" type="text" name="Zcode"  placeholder="Zip Code/Postal Code">
+    </div>
+</div>
+<br/><br/>
+</div>
+ <div class="col-md-2 pull-right">
+     
+ 
+
+    </div>
+
+</div>
+
+        </div>
+      </div>
+    </div>
+
+   
 <br/>
          <button type="button" class=" btn button_bg"><span class="NormalCharacterStyle">NEXT</span></button>
   </div>
+
 </div>
-<script type="text/javascript">
-  $('#menu_toggle').on('click', function () {
-    var iSelector = $(this).find('i:first');
-    if (iSelector.hasClass('glyphicon-chevron-down')) {
-        iSelector.removeClass('glyphicon-chevron-down')
-        iSelector.addClass('glyphicon-chevron-up')
-    } else if (iSelector.hasClass('glyphicon-chevron-up')) {
-        iSelector.removeClass('glyphicon-chevron-down')
-        iSelector.addClass('glyphicon-chevron-down')
-    }
-});
-  $('#menu_toggle2').on('click', function () {
-    var iSelector = $(this).find('i:first');
-    if (iSelector.hasClass('glyphicon-chevron-down')) {
-        iSelector.removeClass('glyphicon-chevron-down')
-        iSelector.addClass('glyphicon-chevron-up')
-    } else if (iSelector.hasClass('glyphicon-chevron-up')) {
-        iSelector.removeClass('glyphicon-chevron-down')
-        iSelector.addClass('glyphicon-chevron-down')
-    }
-});
-  $('#menu_toggle3').on('click', function () {
-    var iSelector = $(this).find('i:first');
-    if (iSelector.hasClass('glyphicon-chevron-down')) {
-        iSelector.removeClass('glyphicon-chevron-down')
-        iSelector.addClass('glyphicon-chevron-up')
-    } else if (iSelector.hasClass('glyphicon-chevron-up')) {
-        iSelector.removeClass('glyphicon-chevron-down')
-        iSelector.addClass('glyphicon-chevron-down')
-    }
-});
-</script>
+
 </body>
 </html>
