--- a/Design HTML/Dashboard.html
+++ b/Design HTML/Dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <title>My Applications</title>
+     <title>Dashboard</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="css/bootstrap.css">
 
@@ -24,19 +24,19 @@
 
   </script>
 </head>
-<div class="navbar-inverse" style="border-radius: 0px;">
+<div class="navbar-inverse" style="border-radius: 0px;height: 60px;">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       
-      <a class="navbar-brand" href="#"><img src="images/Logo_1_.png"></a>
+      <a class="navbar-brand" href="#"><img src="images/Logo_1_.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="#" style="font-size: 20px;top: 6px;">Home </a></li>
-        <li><a href="#"><img src="images/header_dashboard_button_1_.png" style="margin: -15px;height: 65px"></a></li>
-        <li style="color: transparent;">home</li>
+     <ul class="nav navbar-nav">
+        <li><a href="#" class="NormalCharacterStyle2019" style="top: 6px;">Home </a></li>
+        <li><a href="#" class="dashboard_image" style="color: white; font-size : 18px; line-height : 22px;"><div style="margin-top: 5px">Dashboard</div></a></li>
+        <li style="color: transparent;">home</li>&nbsp;&nbsp;&nbsp;
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -153,16 +153,16 @@
 
         </div>
               </div>
-     <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><img src="images/header_notification_icon_1_.png"></a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="images/header_username_1_.png">&nbsp;<img src="images/header_profile_icon_1_.png"></a>
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="#" style="margin-top: 5px;"><img src="images/header_notification_icon_1_.png"></a></li>
+        <li class="dropdown" style="height: 60px;">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="NormalCharacterStyle22" style="font-size: 20px;margin-right: 10px;border-bottom: 1px solid white;">Faizan</span>&nbsp;<img src="images/header_profile_icon_1_.png"></a>
           <ul class="dropdown-menu myprofile_dropdown">
-            <li><a href="My_Profile.html" class="myprofile_dropdown_link NormalCharacterStyle24">Profile</a></li>
+            <li><a href="My_Profile.html" class="myprofile_dropdown_link NormalCharacterStyle25">Profile</a></li>
              <li role="separator" class="profile_divider"></li>
-            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle24">Settings</a></li>
+            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle25">Settings</a></li>
             <li role="separator" class="profile_divider"></li>
-            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle24">Log Out</a></li>
+            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle25">Log Out</a></li>
           </ul>
         </li>
       </ul>
@@ -174,7 +174,7 @@
 
 <div class="container-fluid col-sm-12 header2 NormalCharacterStyle25">
   
-    <div style="margin-top: 15px">Dashboard > My Applications</div>
+    <div style="margin-top: 12px">Dashboard > My Applications</div>
 
 </div>
 <br/>
@@ -183,27 +183,33 @@
   <div class="row content" style="min-height: 100vh;height: 1000px">
     <div class="col-sm-2 sidenav text-left side-menu">
 
-      <div class="dropdown" style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps1" class="main_list NormalCharacterStyle18" href="My_Applications.html">My Applications<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right dropdown_icon" data-toggle="collapse" data-target="#clps1"></a></div></a>   
-</div>
+      <a class="main_list " href="My_Applications.html">  <div style="margin-bottom: 15px;">
+    <span class="NormalCharacterStyle18">My Applications</span><span class="icon-arrow-right pull-right"><img src="images/arrow.png"></span>   
+</div></a>
 
-      <div class="dropdown"  style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps2" class="main_list NormalCharacterStyle25">File Admission App<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-down drop_down_icon_1_ " data-toggle="collapse" data-target="#clps2"></a></div></a>
+
+       <div class="dropdown"  style="margin-bottom: 15px;">
+    <a data-toggle="collapse" data-target="#clps2" class="main_list " ><div><span class="NormalCharacterStyle25"> File Admission App</span><span class="icon-arrow-right pull-right main_list"><img src="images/arrow.png"></span></div></a>
     <div class="collapse" id="clps2">
       <br/>
-        <li class="menu_list "><a href="Personal_Details.html" class="NormalCharacterStyle24">Personal Details</a>
+        <li class="list_items"><a href="Personal_Details.html" class="menu_list "><span  class="NormalCharacterStyle24">Personal Details</span></a>
       </li>
-        <li class="menu_list "><a href="Make_Choices.html" class="NormalCharacterStyle24">Make Choices</a></li>
-        <li class="menu_list"><a href="Educational_Details.html" class="NormalCharacterStyle24">Educational Details</a></li>
-        <li class="menu_list"><a href="Test_Results.html" class="NormalCharacterStyle24">Test Results</a></li>
-        <li class="menu_list"><a href="Upload_Documents.html" class="NormalCharacterStyle24">Documents</a></li>
-        <li class="menu_list"><a href="Payments.html" class="NormalCharacterStyle24">Payments</a></li>
+      <li class="list_items"><a href="Make_Choices.html" class="menu_list "><span  class="NormalCharacterStyle24">Make Choices</span></a>
+      </li>
+      <li class="list_items"><a href="Educational_Details.html" class="menu_list "><span  class="NormalCharacterStyle24">Educational Details</span></a>
+      </li>
+      <li class="list_items"><a href="Test_Results.html" class="menu_list "><span  class="NormalCharacterStyle24">Test Results</span></a>
+      </li>
+      <li class="list_items"><a href="Upload_Documents.html" class="menu_list "><span  class="NormalCharacterStyle24">Documents</span></a>
+      </li>
+       <li class="list_items"><a href="Payments.html" class="menu_list "><span  class="NormalCharacterStyle24">Payments</span></a>
+      </li>
     </div>   
 </div>
 
-      <div class="dropdown"  style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps3" class="main_list NormalCharacterStyle25">My Payments<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps3"></a></div></a>
-</div>
+  <a class="main_list " href="My_Profile.html">  <div style="margin-bottom: 15px;">
+    <span class="NormalCharacterStyle25">My Payments</span><span class="icon-arrow-right pull-right"><img src="images/arrow.png"></span>   
+</div></a>
 
     </div>
 <br/>
