--- a/Design HTML/Student_Registration_Complete.html
+++ b/Design HTML/Student_Registration_Complete.html
@@ -24,19 +24,19 @@
 
   </script>
 </head>
-<div class="navbar-inverse" style="border-radius: 0px;">
+<div class="navbar-inverse" style="border-radius: 0px;height: 60px;">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       
-      <a class="navbar-brand" href="#"><img src="images/Logo_1_.png"></a>
+      <a class="navbar-brand" href="#"><img src="images/Logo_1_.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#" style="font-size: 20px;top: 6px;">Home </a></li>
-        <li><a href="#"><img src="images/header_dashboard_button_1_.png" style="margin: -15px;height: 65px"></a></li>
-        <li style="color: transparent;">home</li>
+        <li><a href="#" class="NormalCharacterStyle2019" style="top: 6px;">Home </a></li>
+        <li><a href="#" class="dashboard_image" style="color: white; font-size : 18px; line-height : 22px;"><div style="margin-top: 5px">Dashboard</div></a></li>
+        <li style="color: transparent;">home</li>&nbsp;&nbsp;&nbsp;
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -46,15 +46,15 @@
         <span><a href=""><img src="images/filter_button.png" style="margin-top: 4px;;margin-left: -10px;"></a></span>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><img src="images/header_notification_icon_1_.png"></a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="images/Guest_Image.png">&nbsp;<img src="images/header_profile_icon_1_.png"></a>
+        <li><a href="#" style="margin-top: 5px;"><img src="images/header_notification_icon_1_.png"></a></li>
+        <li class="dropdown" style="height: 60px;">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="NormalCharacterStyle22" style="font-size: 20px;margin-right: 10px;border-bottom: 1px solid white;">Faizan</span>&nbsp;<img src="images/header_profile_icon_1_.png"></a>
           <ul class="dropdown-menu myprofile_dropdown">
-            <li><a href="My_Profile.html" class="myprofile_dropdown_link NormalCharacterStyle24">Profile</a></li>
+            <li><a href="My_Profile.html" class="myprofile_dropdown_link NormalCharacterStyle25">Profile</a></li>
              <li role="separator" class="profile_divider"></li>
-            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle24">Settings</a></li>
+            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle25">Settings</a></li>
             <li role="separator" class="profile_divider"></li>
-            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle24">Log Out</a></li>
+            <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle25">Log Out</a></li>
           </ul>
         </li>
       </ul>
@@ -66,7 +66,7 @@
 
 <div class="container-fluid col-sm-12 header2 NormalCharacterStyle25">
   
-    <div style="margin-top: 15px">Dashboard > Registration</div>
+    <div style="margin-top: 12px">Dashboard > Registration</div>
 
 </div>
 <br/>
