payment screen updated

--- a/Design HTML/My_Profile.html
+++ b/Design HTML/My_Profile.html
@@ -138,7 +138,7 @@
       <div class="modal-header text-center">
         <span class="Profile_modal_heading">Contact us</span>
        <span> <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+            <span><img src="images./close_icon.png"></span>
         </button></span>
       </div>
       <div class="modal-body">
@@ -170,7 +170,7 @@
       <div class="modal-header text-center">
         <span class="Profile_modal_heading">Invite Friends</span>
        <span> <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+            <span><img src="images./close_icon.png"></span>
         </button></span>
       </div>
       <div class="modal-body">
