Make_Choices Page Updated!

--- a/Design HTML/Make_Choices.html
+++ b/Design HTML/Make_Choices.html
@@ -277,33 +277,22 @@
 </div>
 <button type="button" class=" btn add_button_1_ pull-right" data-toggle="modal" data-target="#exampleModalCenter"><span class="NormalCharacterStyle">ADD</span></button>
 
-<div class="NormalCharacterStyle111 text-left" style="margin-top: 300px;">Your Preferences</div>
+<div class="NormalCharacterStyle111 text-left" style="margin-top: 280px;margin-bottom: 20px;">Your Preferences</div>
 
-<table>
-    <tr>
-        <th></th>
-        <th>Degree Program</th>
-         <th>Campus</th>
-          <th>Catagory/Semester</th>
-           <th></th>
-    </tr>
-    <tr class="text-left">
-        <td>1-</td>
-        <td>Civil Engineering</td>
-              <td>Lahore</td>
-        <td>Catagory A</td>
-              <td><a href=""><span class="edit_icon_1_"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><span class="delete_icon"></span></a></td>
-
-    </tr>
-    <tr class="text-left">
-        <td></td>
-        <td></td>
-              <td></td>
-        <td></td>
-              <td></td>
-
-    </tr>
-</table>
+        <table class=" table-fixed text-left">
+          <tbody>
+            <tr >
+              <td class="col-md-1"><span style="color: transparent;">Num</span></td><td class="col-md-3"><b>Degree Program</b></td><td class="col-md-2"><b>Campus</b></td><td class="col-md-4"><b>Catagory/Semester</b></td><td class="col-md-2"><span style="color: transparent;">Images</span></td>
+            </tr>
+            <tr>
+              <td class="col-md-1">1-</td><td class="col-md-3">Mike Adams</td><td class="col-md-2">23</td><td class="col-md-4">Mike Adams</td><td class="col-md-2"><a href=""><img src="images/edit_icon_1_.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><img src="images/delete_icon.png"></a></td>
+            </tr>
+            <tr>
+              <td class="col-md-1">1-</td><td class="col-md-3">Mike Adams</td><td class="col-md-2">23</td><td class="col-md-4">Mike Adams</td><td class="col-md-2"><a href=""><img src="images/edit_icon_1_.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><img src="images/delete_icon.png"></a></td>
+            </tr>
+           
+          </tbody>
+        </table>
 <br/><br/>
 <div><a href="" class="NormalCharacterStyle10" style="margin-left: 420px;">DONE</a></div>
 
