--- a/EducationEverest/EmailContent.html
+++ b/EducationEverest/EmailContent.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h1 style="font-family:'Raleway', sans-serif;  color: #ffcb28; font-size:24px; font-weight:600" >Education Everest</h1>
+                <h1 style="font-family:Tahoma;  color: #ffcb28; font-size:24px; font-weight:600" >Education Everest</h1>
                 <h2 style="text-align:center; color: #ffcb28; border-bottom:1px solid grey; padding-bottom:1%;">
                     {title}
                 </h2>
